syntax = "proto3";

option csharp_namespace = "Client.Game.Proto";

service Game {
	rpc StartGame (StartGameRequest) returns (StartGameResponse);
	rpc Hi (SayHiRequest) returns (SayHiResponse);
}

message	SayHiRequest
{
}

message	SayHiResponse
{
}

message StartGameRequest{
	GameInfo gameInfo = 1;
}

message StartGameResponse{
}

message Player {
	string ip = 1;
	int32 port = 2;
	string name = 3;
}

message GameInfo {
	string id = 1;
	repeated Player players = 2;
}